--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^2.6.10",
     "vue-chartjs": "^3.4.2",
     "vue-router": "^3.0.6",
+    "vue-tables-2": "^1.4.70",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
